--- a/ProjectWithGet/.classpath
+++ b/ProjectWithGet/.classpath
@@ -18,5 +18,7 @@
 			<attribute name="javadoc_location" value="file:/cse/home/cse13167/git/G-Force/ProjectWithGet/lib/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/icepdf-core.jar"/>
+	<classpathentry kind="lib" path="lib/icepdf-viewer.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
