ant build mostly working, some other minor tweaks

--- a/ProjectWithGet/lib/ProjectWithGet/build.xml
+++ b/ProjectWithGet/lib/ProjectWithGet/build.xml
@@ -1,44 +1,69 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<project basedir="." default="build-jar" name="Tab2PDF">
+	<property environment="env" />
+	<property name="debuglevel" value="source,lines,vars" />
+	<property name="target" value="1.7" />
+	<property name="source" value="1.7" />
+	
+	<property name="one-jar.dist.dir" value="onejar" />
+	<import file="${one-jar.dist.dir}/one-jar-ant-task.xml" optional="true" />
+	
+	<property name="src.dir" value="src" />
+	<property name="bin.dir" value="bin" />
+	<property name="build.dir" value="build" />
+	<property name="classes.dir" value="${build.dir}/classes" />
+	<property name="jar.target.dir" value="${build.dir}/jars" />
+	<property name="external.lib.dir" value="lib" />
+	<property name="final.jar" value="${jar.target.dir}/Tab2PDF" />
 
-<project name="Tab2Pdf" default="dist" basedir=".">
-    <description>
-        Tab2PDF Build File
-    </description>
-  <!-- set global properties for this build -->
-  <property name="src" location="src"/>
-  <property name="build" location="bin"/>
-  <property name="dist"  location="dist"/>
-
-  <target name="init">
-    <!-- Create the time stamp -->
-    <tstamp/>
-    <!-- Create the build directory structure used by compile -->
-    <mkdir dir="${build}"/>
-  </target>
-
-  <target name="compile" depends="init"
-        description="compile the source " >
-    <!-- Compile the java code from ${src} into ${build} -->
-    <javac srcdir="${src}" destdir="${build}"/>
-  </target>
-
-  <target name="dist" depends="compile"
-        description="generate the distribution" >
-    <!-- Create the distribution directory -->
-    <mkdir dir="${dist}/lib"/>
-
-    <!-- Put everything in ${build} into the MyProject-${DSTAMP}.jar file -->
-    <jar jarfile="${dist}/lib/MyProject-${DSTAMP}.jar" basedir="${build}">
-		<manifest>
-			<attribute name="Main-Class" value="com.java.pdfmaker.TabUIMainWindow" />
-		</manifest>
-	</jar>
-  </target>
-
-  <target name="clean"
-        description="clean up" >
-    <!-- Delete the ${build} and ${dist} directory trees -->
-    <delete dir="${build}"/>
-    <delete dir="${dist}"/>
-  </target>
+	<property name="main.class" value="com.java.pdfmaker.Tab2PDF" />
+	
+	<path id="project.classpath">
+		<fileset dir="${external.lib.dir}" >
+			<include name="*.jar" />
+		</fileset>
+	</path>
+	
+	<target name="clean">
+		<delete dir="${build.dir}" />
+	</target>
+		
+	<target name="init" depends="clean">
+		<mkdir dir="${bin.dir}" />
+		<mkdir dir="${build.dir}" />
+		<mkdir dir="${classes.dir}" />
+		<mkdir dir="${jar.target.dir}" />
+		<copy includeemptydirs="false" todir="${classes.dir}" >
+			<fileset dir="${src.dir}" >
+				<exclude name="**/*.java" />
+			</fileset>
+		</copy>
+	</target>
+	
+	<target name="build" depends="init">
+		<echo message="${ant.project.name}: ${ant.file}" />
+		<javac debug="true" debuglevel="${debuglevel}" destdir="${classes.dir}" source="${source}" target="${target}" >
+			<src path="${src.dir}" />
+			<classpath refid="project.classpath" />
+		</javac>
+	</target>
+	
+	<target name="build-jar" depends="build">
+		<delete file="${final.jar}" />
+		<one-jar destfile="${final.jar}" onejarmainclass="${main.class}">
+			<main>
+				<fileset dir="${classes.dir}" />
+			</main>
+			<lib>
+				<fileset dir="${external.lib.dir}" />
+			</lib>
+		</one-jar>
+	</target>
 </project>
+	
+	
+	
+	
+	
+	
+		
