--- a/ProjectWithGet/lib/ProjectWithGet/build.xml
+++ b/ProjectWithGet/lib/ProjectWithGet/build.xml
@@ -15,6 +15,7 @@
 	<property name="jar.target.dir" value="${build.dir}/jars" />
 	<property name="external.lib.dir" value="lib" />
 	<property name="final.jar" value="${jar.target.dir}/Tab2PDF" />
+	<property name="assets.dir" value="assets" />
 
 	<property name="main.class" value="com.java.pdfmaker.Tab2PDF" />
 	
@@ -32,11 +33,15 @@
 		<mkdir dir="${bin.dir}" />
 		<mkdir dir="${build.dir}" />
 		<mkdir dir="${classes.dir}" />
+		<mkdir dir="${classes.dir}/${assets.dir}" />
 		<mkdir dir="${jar.target.dir}" />
 		<copy includeemptydirs="false" todir="${classes.dir}" >
 			<fileset dir="${src.dir}" >
 				<exclude name="**/*.java" />
 			</fileset>
+		</copy>
+		<copy includeemptydirs="false" todir="${classes.dir}/${assets.dir}">
+			<fileset dir="${assets.dir}" />
 		</copy>
 	</target>
 	
