--- a/ProjectWithGet/lib/ProjectWithGet/.classpath
+++ b/ProjectWithGet/lib/ProjectWithGet/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/itextpdf-5.3.5.jar" sourcepath="lib">
 		<attributes>
@@ -19,5 +20,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/icepdf-core.jar"/>
 	<classpathentry kind="lib" path="lib/icepdf-viewer.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
